# vesc-mcp

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Makefile  README.md  config.example.toml  config.rx5700xt-jina-split.toml  flake.nix
.config/: coverage-baseline.txt  coverage-exclude.regex  coverage.toml  nextest.toml
.github/workflows/: ci.yml  coverage.yml  m1-embedding-benchmark.yml  m1-reranker-benchmark.yml  release.yml
.serena/: project.yml
catalog/: gap-analysis.md  priorities.json  schema.yaml
catalog/abi/: minimal-test-package-abi.yaml
catalog/bldc/: native-lib-macros.yaml  nvm.yaml  vesc_c_if.yaml
catalog/poc/: minimal-test-package-abi.yaml
catalog/refloat/: build-flow.yaml  commands.yaml  lisp-loader.yaml  native-lib.yaml
catalog/vesc/: native-lib-macros.yaml  nvm.yaml  vesc_c_if.yaml
crates/vesc-domain/: Cargo.toml
crates/vesc-domain/src/: error.rs  lib.rs  package.rs  paths.rs
crates/vesc-domain/src/layout/: mod.rs
crates/vesc-domain/src/legacy/: mod.rs
crates/vesc-domain/src/pkgdesc/: dialect.rs  mod.rs  native_lib.rs  newtypes.rs  parse.rs  vesc_tool.rs
crates/vesc-domain/src/validate/: mod.rs
crates/vesc-domain/src/wire/: mod.rs  write.rs
crates/vesc-domain/tests/: fixtures.rs
crates/vesc-knowledge-index/: Cargo.toml  build.rs
crates/vesc-knowledge-index/src/: benchmark.rs  builder.rs  embedded.rs  entry.rs  evaluation.rs  fusion.rs  hardware.rs  investigation.rs  lexical.rs  lib.rs  lifecycle.rs  path_evaluation.rs  pipeline.rs  planning.rs  release_repositories.rs  reranking.rs  search.rs  semantic.rs
crates/vesc-knowledge-index/src/corpus/: chunking.rs  full_history.rs  git.rs  history.rs  ingest.rs  mod.rs
crates/vesc-knowledge-index/src/parsers/: mod.rs  native_lib_abi.rs  poc_abi.rs  priorities.rs  refloat_commands.rs  vesc_c_if.rs
crates/vesc-knowledge-index/tests/: chunking.rs  corpus_contracts.rs  emit_golden.rs  entry_schema.rs  evaluation_baseline.rs  evaluation_v2.rs  facet_reranking.rs  full_history.rs  git_ingestion.rs  golden_search.rs  index_builder_native_lib_abi.rs  index_builder_poc_abi.rs  index_builder_priorities.rs  index_builder_refloat_commands.rs  index_builder_vesc_c_if.rs  index_rebuild_deterministic.rs  ingestion.rs  investigation_contract.rs  investigation_pipeline.rs  lexical.rs  lexical_embedded.rs  modern_embedding_config.rs  path_evaluation.rs  planner_schema.rs  rank_entries.rs  tagged_history.rs
crates/vesc-mcp-adapters/: Cargo.toml
crates/vesc-mcp-adapters/src/: build.rs  error.rs  inspect.rs  lib.rs
crates/vesc-mcp-adapters/tests/: characterization.rs  path_layout.rs
crates/vesc-mcp-adapters/tests/common/: mod.rs
crates/vesc-mcp-core/: Cargo.toml
crates/vesc-mcp-core/src/: benchmark.rs  config.rs  error.rs  lib.rs  managed_git.rs  managed_repositories.rs  managed_snapshots.rs  preparation_status.rs  server.rs  test_support.rs  workspace.rs
crates/vesc-mcp-core/src/catalog/: env.rs  mod.rs  paths.rs  validate.rs
crates/vesc-mcp-core/src/resources/: abi.rs  attribution.rs  catalog.rs  catalog_watch.rs  feedback.rs  knowledge.rs  manifest.rs  mod.rs  refloat_command.rs  static.rs  subscriptions.rs  uri.rs
crates/vesc-mcp-core/src/resources/snippets/: lisp_imports.md  pkgdesc_dialects.md  vescpackage_reference.md
crates/vesc-mcp-core/src/tools/: build.rs  check.rs  inspect.rs  knowledge_feedback.rs  list_packages.rs  list_source_versions.rs  mod.rs  prepare_knowledge.rs  search_knowledge.rs  tool_error.rs  validate.rs
crates/vesc-mcp-core/tests/: catalog_paths.rs  catalog_validate.rs  ci_nextest.rs  docs_knowledge_feedback_design.rs  fixtures_broken.rs  fixtures_native_lib_minimal.rs  fixtures_poc_minimal.rs  fixtures_refloat_minimal.rs  http_service.rs  resource_abi.rs  resource_build_recipe.rs  resource_doc_topic.rs  resource_list_snapshot.rs  resource_manifest.rs  resource_refloat_command.rs  resource_registry.rs  resource_service.rs  resource_subscriptions.rs  tool_build_vescpkg.rs  tool_build_vescpkg_golden.rs  tool_build_vescpkg_parity.rs  tool_inspect_pkgdesc.rs  tool_inspect_vescpkg.rs  tool_knowledge_feedback.rs  tool_list_packages.rs  tool_run_package_checks.rs  tool_search_vesc_knowledge.rs  tool_validate_package_layout.rs  tool_versioned_knowledge.rs
crates/vesc-mcp-core/tests/snapshots/: resource_list_snapshot__resources_list_snapshot.snap
crates/vesc-mcp-server/: Cargo.toml
crates/vesc-mcp-server/src/: http.rs  main.rs
crates/vesc-mcp-server/tests/: http_streamable.rs  mcp_harness.rs  smoke_stdio.rs
docs/: architecture.md  codegraphrag-design.md  configuration.md  http.md  installation.md  knowledge-feedback-design.md  nix.md  poc-integration.md  provider-profiling.md  rag-threat-model.md  safety.md  testing.md  troubleshooting.md  vesc-pkg-lib-abi.md  vescpackage-reference.md  vescpkg-wire-format.md
docs/examples/: build-native-lib-package-session.md  build-poc-package-session.md  inspect-refloat-session.md  search-knowledge-session.md
nix/: module-test.nix  module.nix
release/benchmarks/vescm-178/: report.json  report.md
scripts/: benchmark-bonsai-critic.py  benchmark-planners.py  benchmark-qwen-reranker.py  combine-bakeoff-reports.py  coverage-summary.sh  docs-smoke.sh  gen_poc_minimal_golden.py  parse_flamegraph  parse_flamegraph.rs  parse_perfdata  parse_perfdata.rs  profile-vesc-mcp.sh  render-vescm-178-report.py  rx5700xt-jina-sequence-matrix.sh  rx5700xt-jina-split.sh  verify-bakeoff-report.py  verify-bonsai-bakeoff.py  verify-bounded-pipeline.py  verify-codegraphrag-design.py  verify-hardware-placement.py  verify-ort-provider.py  verify-plan-6.py  verify-planner-bakeoff.py  verify-reranker-bakeoff.py
tests/benchmark/: bakeoff-models.json  bonsai-models.json  jina-embedding-model.json  m1-granite-97m.json  modern-embedding-models.json  planner-models.json  reranker-models.json  rx5700xt-jina-fp16.json
tests/fixtures/: README.md
tests/golden/: search_build_pkg_from_desc.json  search_lbm_add_extension.json  search_nvm_write.json  search_refloat_realtime.json
tests/scripts/: test_verify_ort_provider.py
(+77 files in other folders)
