[workspace]
members = [
    "crates/vesc-domain",
    "crates/vesc-mcp-core",
    "crates/vesc-mcp-server",
]
default-members = ["crates/vesc-mcp-server"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["mjc"]

[workspace.dependencies]
anyhow = "1"
rmcp = { version = "1.8", features = ["server", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
