[workspace]
members = [
    "crates/vesc-domain",
    "crates/vesc-knowledge-index",
    "crates/vesc-mcp-adapters",
    "crates/vesc-mcp-core",
    "crates/vesc-mcp-server",
]
default-members = ["crates/vesc-mcp-server"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.97.1"
license = "MIT"
authors = ["mjc"]

[workspace.dependencies]
anyhow = "1"
rmcp = { version = "2.2", features = ["server", "transport-io"] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
insta = { version = "1", features = ["json"] }
serde_yaml = "0.9"
toml = "1.1.3"
sha2 = "0.11"
fastembed = { version = "5.17.3", default-features = false }
ort = { version = "=2.0.0-rc.12", default-features = false }
pulldown-cmark = "0.13"
tantivy = "0.26"
gix = { version = "0.85", default-features = false, features = ["sha1", "blob-diff"] }
thiserror = "2"
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }
rayon = "1.11"
coz = "0.1.3"
flate2 = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "net"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[patch.crates-io]
fastembed = { path = "vendor/fastembed" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

[profile.release]
panic = "abort"
strip = true
