[package]
name = "vesc-knowledge-index"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Searchable firmware and package knowledge index types and builders"

[lints]
workspace = true

[features]
git-corpus = ["dep:gix"]
semantic-fastembed = ["dep:fastembed", "fastembed/ort-load-dynamic"]
semantic-coreml = ["semantic-fastembed", "dep:ort", "ort/coreml"]
semantic-fastembed-online = ["semantic-fastembed", "fastembed/online"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
pulldown-cmark.workspace = true
tantivy.workspace = true
gix = { workspace = true, optional = true }
fastembed = { workspace = true, optional = true }
ort = { workspace = true, optional = true }
thiserror.workspace = true

[[bin]]
name = "gen-knowledge-index"
path = "src/bin/gen_knowledge_index.rs"

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
