[package]
name = "vesc-mcp-adapters"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Adapters between vesc-domain and vesc-rust-poc vesc-pkg-build"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
vesc-domain = { path = "../vesc-domain" }
vesc-pkg-build = { path = "../../../vesc-rust-poc/crates/vesc-pkg-build" }

[dev-dependencies]
tempfile = "3"
