[package]
name = "vesc-mcp-adapters"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Host-side adapters bridging vesc-domain pack/inspect to MCP tools"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
vesc-domain = { path = "../vesc-domain" }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "gen-poc-minimal-golden"
path = "src/bin/gen_poc_minimal_golden.rs"
