[package]
name = "vesc-mcp-adapters"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Host-side adapters for vesc-domain inspect and pkgdesc discovery"

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
vesc-domain = { path = "../vesc-domain" }

[dev-dependencies]
tempfile = "3"
