[package]
name = "vesc-mcp-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared MCP server logic, config, and error types for vesc-mcp"

[lints]
workspace = true

[features]
test-fixtures = []

[dependencies]
anyhow.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
tempfile = "3"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
sha2.workspace = true
vesc-domain = { path = "../vesc-domain" }
vesc-mcp-adapters = { path = "../vesc-mcp-adapters" }

[dev-dependencies]
insta.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
