[package]
name = "vesc-mcp-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared MCP server logic, config, and error types for vesc-mcp"

[lints]
workspace = true

[features]
test-fixtures = []
semantic-fastembed = ["vesc-knowledge-index/semantic-fastembed"]
semantic-coreml = ["semantic-fastembed", "vesc-knowledge-index/semantic-coreml"]
semantic-rocm = ["semantic-fastembed", "vesc-knowledge-index/semantic-rocm"]
semantic-migraphx = ["semantic-fastembed", "vesc-knowledge-index/semantic-migraphx"]
coz-profile = ["vesc-knowledge-index/coz-profile"]

[dependencies]
anyhow.workspace = true
fs4 = "0.13"
gix = { workspace = true, features = ["blocking-network-client", "blocking-http-transport-reqwest", "revision"] }
# Select rustls with ring without enabling reqwest's default AWS-LC provider.
reqwest = { version = "0.13.4", default-features = false, features = ["rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
tempfile = "3"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
sha2.workspace = true
vesc-domain = { path = "../vesc-domain" }
vesc-knowledge-index = { path = "../vesc-knowledge-index" }
vesc-mcp-adapters = { path = "../vesc-mcp-adapters" }

[dev-dependencies]
anyhow.workspace = true
insta.workspace = true
rmcp = { workspace = true, features = ["client"] }
serde_json.workspace = true
serde_yaml.workspace = true
