[package]
name = "vesc-mcp-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "stdio MCP server for VESC / vescpkg development"

[[bin]]
name = "vesc-mcp-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vesc-mcp-core = { path = "../vesc-mcp-core" }
