[package]
name = "vesc-mcp-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "stdio MCP server for VESC / vescpkg development"

[[bin]]
name = "vesc-mcp-server"
path = "src/main.rs"

[lints]
workspace = true

[features]
semantic-fastembed = ["vesc-mcp-core/semantic-fastembed"]
semantic-coreml = ["semantic-fastembed", "vesc-mcp-core/semantic-coreml"]
semantic-rocm = ["semantic-fastembed", "vesc-mcp-core/semantic-rocm"]
semantic-migraphx = ["semantic-fastembed", "vesc-mcp-core/semantic-migraphx"]
coz-profile = ["vesc-mcp-core/coz-profile"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
rmcp = { workspace = true, features = ["transport-streamable-http-server"] }
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
vesc-mcp-core = { path = "../vesc-mcp-core" }

[dev-dependencies]
anyhow.workspace = true
tempfile = "3"
rmcp = { workspace = true, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
tokio.workspace = true
